--- a/food_delivery_app/package.json
+++ b/food_delivery_app/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "joi": "^17.6.0",
+    "mongoose": "^6.2.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
