db integration done

--- a/food_delivery_app/package.json
+++ b/food_delivery_app/package.json
@@ -1,7 +1,6 @@
 {
   "name": "food_delivery_app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
@@ -18,5 +17,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "description": ""
 }
