--- a/food_delivery_app/.env
+++ b/food_delivery_app/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 DEBUG_MODE = true
+DB_URL = mongodb+srv://mayur-init:Whyred07@cluster0.ldhun.mongodb.net/foodzo?retryWrites=true&w=majority
