--- a/food_delivery_app/.env
+++ b/food_delivery_app/.env
@@ -1,3 +1,4 @@
 PORT = 3000
 DEBUG_MODE = true
+JWT_SECRET = Foodzo2022
 DB_URL = mongodb+srv://mayur-init:Whyred07@cluster0.ldhun.mongodb.net/foodzo?retryWrites=true&w=majority
