--- a/food_delivery_app/package.json
+++ b/food_delivery_app/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
-    "mongoose": "^6.2.7"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.7",
+    "mongoose-beautiful-unique-validation": "^7.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
