--- a/food_delivery_app/.env
+++ b/food_delivery_app/.env
@@ -1,4 +1,5 @@
 PORT = 3000
 DEBUG_MODE = true
-JWT_SECRET = Foodzo2022
+JWT_SECRET = FoodzoSecret01
+REFRESH_SECRET = FoodzoSudoSecret01
 DB_URL = mongodb+srv://mayur-init:Whyred07@cluster0.ldhun.mongodb.net/foodzo?retryWrites=true&w=majority
