--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.7"
+    "mongoose": "^6.2.7",
+    "mongoose-currency": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
