--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "googleapis": "^100.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
-    "mongoose-currency": "^0.2.0"
+    "mongoose-currency": "^0.2.0",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
